--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:24+'
     compile 'com.android.support:recyclerview-v7:24+'
     compile 'com.github.satyan:sugar:1.4'
+    compile 'com.google.android.gms:play-services-maps:10.2.4'
+    compile 'com.google.android.gms:play-services-location:10.2.4'
     compile "com.squareup.picasso:picasso:2.4.0"
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
